Fixed #129 related bug, with still appearing scrollbar

--- a/web/less/codemirror.less
+++ b/web/less/codemirror.less
@@ -10,7 +10,7 @@
 
 .CodeMirror-scroll {
   overflow-x: auto;
-  overflow-y: hidden;
+  overflow-y: auto;
   height: auto;
   /* This is needed to prevent an IE[67] bug where the scrolled content
      is visible outside of the scrolling box. */
@@ -22,7 +22,7 @@
 .CodeMirror-scrollbar {
   float: right;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: hidden;
 
   /* This corrects for the 1px gap introduced to the left of the scrollbar
      by the rule for .CodeMirror-scrollbar-inner. */
